# openweathergit

./: .env-example  .gitignore  Dockerfile  README.md  docker-compose.yaml  pyproject.toml
app/: app.py  schemas.py  util.py
app/openweathersdk/: openweather.py
tests/: conftest.py  mocks.py  test_api.py  test_openweathersdk.py  test_util.py
